# multimedia_midi_framework

./: OAT.xml  README.md  README_zh.md  bundle.json  capi-midi-base.md  capi-midi.md  cfi_blocklist.txt  config.gni
frameworks/native/midi/: BUILD.gn
frameworks/native/midi/include/: midi_client_private.h  midi_service_client.h  midi_service_interface.h
frameworks/native/midi/src/: midi_client.cpp  midi_service_client.cpp
frameworks/native/midiutils/: BUILD.gn
frameworks/native/midiutils/include/: midi_utils.h
frameworks/native/midiutils/src/: midi_utils.cpp
frameworks/native/ohmidi/: BUILD.gn  OHMidi.cpp
interfaces/: midi_info.h  midi_log.h  midi_service_death_recipent.h
interfaces/inner_api/native/: midi_client.h
interfaces/kits/c/midi/: native_midi.h  native_midi_base.h
patches/: patches.json
sa_profile/: BUILD.gn  midi_server.json
services/: BUILD.gn
services/common/: BUILD.gn
services/common/include/: UmpPacket.h  UmpProcessor.h  futex_tool.h  midi_shared_memory.h  midi_shared_ring.h
services/common/src/: UmpPacket.cpp  UmpProcessor.cpp  futex_tool.cpp  midi_shared_ring.cpp
services/etc/: midi_server.cfg
services/idl/: BUILD.gn  IIpcMidiClientInServer.idl  IIpcMidiInServer.idl  IMidiCallback.idl  IMidiDeviceOpenCallback.idl  IMidiService.idl
services/server/include/: midi_client_connection.h  midi_client_in_server.h  midi_device_ble.h  midi_device_connection.h  midi_device_driver.h  midi_device_mananger.h  midi_device_usb.h  midi_in_server.h  midi_listener_callback.h  midi_server.h  midi_service_controller.h
services/server/src/: midi_client_connection.cpp  midi_client_in_server.cpp  midi_device_ble.cpp  midi_device_connection.cpp  midi_device_mananger.cpp  midi_device_usb.cpp  midi_in_server.cpp  midi_listener_callback.cpp  midi_server.cpp  midi_service_controller.cpp
test/: BUILD.gn
test/demo/: BUILD.gn  midi_demo.cpp
test/fuzzer/: midi_service_controller_fuzzer.cpp
test/unittest/: midi_client_test.cpp  midi_service_controller_test.cpp
test/unittest/common/: BUILD.gn  midi_test_common.h
test/unittest/common/include/: midi_shared_ring_unit_test.h
test/unittest/common/src/: futex_tool_unit_test.cpp  midi_shared_ring_unit_test.cpp
test/unittest/midi_client_connection/: BUILD.gn
test/unittest/midi_client_connection/include/: midi_client_connection_unit_test.h
test/unittest/midi_client_connection/src/: midi_client_connection_unit_test.cpp
test/unittest/midi_client_unit_test/: BUILD.gn  midi_client_unit_test.cpp
test/unittest/midi_device_connection/: BUILD.gn  midi_device_connection_unit_test.cpp
test/unittest/midi_device_manager_unit_test/: BUILD.gn  midi_device_manager_unit_test.cpp
test/unittest/midi_device_usb_unit_test/: BUILD.gn  midi_device_usb_unit_test.cpp
test/unittest/midi_server_unit_test/: BUILD.gn  midi_server_unit_test.cpp
test/unittest/midi_service_client_unit_test/: BUILD.gn  midi_service_client_unit_test.cpp
test/unittest/midi_service_controller_unit_test/: BUILD.gn  midi_service_controller_unit_test.cpp
test/unittest/ump_processor_unit_test/: BUILD.gn
xts/midi/midisdk/: BUILD.gn  Test.json
xts/midi/midisdk/src/: midi_sdk_test.cpp
