# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/midi_framework/config.gni")

group("midi_service_packages") {
  deps = [
    ":midi_server_init",
    ":midi_service",
  ]
}

ohos_prebuilt_etc("midi_server_init") {
  source = "etc/midi_server.cfg"
  relative_install_dir = "init"
  part_name = "midi_framework"
  subsystem_name = "multimedia"
}

ohos_shared_library("midi_service") {
  stack_protector_ret = true
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    cfi_vcall_icall_only = true
    debug = false
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
  }
  install_enable = true

  sources = [
    "server/src/midi_client_in_server.cpp",
    "server/src/midi_device_mananger.cpp",
    "server/src/midi_device_usb.cpp",
    "server/src/midi_listener_callback.cpp",
    "server/src/midi_server.cpp",
    "server/src/midi_service_controller.cpp",
    "server/src/midi_client_connection.cpp",
    "server/src/midi_device_connection.cpp",
  ]

  include_dirs = [

    "${midi_framework_root}/services/server/include",
    "${midi_framework_root}/services/common/include",
    "${midi_framework_root}/frameworks/native/midiutils/include",
    "${midi_framework_root}/interfaces/",
    "${midi_framework_root}/interfaces/kits/c/midi",
  ]

  deps = [
    "${midi_framework_root}/services/common:midi_common",
    "${midi_framework_root}/services/idl:midi_framework_interface",
    "${midi_framework_root}/frameworks/native/midiutils:midiutils",
  ]

  external_deps = [
    "ability_base:want",
    "common_event_service:cesfwk_innerkits",
    "c_utils:utils",
    "drivers_interface_midi:libmidi_proxy_1.0",
    "hilog:libhilog",
    "init:libbegetutil",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "usb_manager:usbsrv_client",
  ]

  cflags_cc = [ "-std=c++20" ]

  defines = []
  subsystem_name = "multimedia"
  part_name = "midi_framework"
}
