# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/multimedia/midi_framework/config.gni")

group("midi_unit_test") {
  testonly = true
  deps = [
    "unittest/common:midi_common_unittest",
    "unittest/midi_client_unit_test:midi_client_unit_test",
    "unittest/midi_device_manager_unit_test:midi_device_manager_unit_test",
    "unittest/midi_service_controller_unit_test:midi_service_controller_unit_test",
    "unittest/midi_client_connection:midi_client_connection_unittest",
    "unittest/midi_device_connection:midi_device_connection_unittest",
  ]
}