# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/midi_framework/config.gni")

ohos_executable("midi_demo") {
  include_dirs = [
    "${midi_framework_root}/interfaces/kits/c/midi",
    "${midi_framework_root}/interfaces/inner_api/native",
    "./midi_demo",
  ]

  cflags = [
    "-Wall",
    "-fno-rtti",
    "-fno-exceptions",
    "-fno-common",
    "-fstack-protector-strong",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-fvisibility=hidden",
    "-Wformat=2",
    "-Wdate-time",
    "-Werror",
    "-Wextra",
    "-Wimplicit-fallthrough",
    "-Wsign-compare",
    "-Wno-unused-parameter",
    "-Wno-deprecated-declarations",
  ]

  cflags_cc = cflags
  cflags_cc += [ "-std=c++20" ]

  sources = [
    "./midi_demo.cpp",
  ]

  deps = [
    "${midi_framework_root}/frameworks/native/ohmidi:ohmidi",
  ]

  external_deps = [ "hilog:libhilog" ]

  install_enable = false

  part_name = "midi_framework"
  subsystem_name = "multimedia"
}
