# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/multimedia/midi_framework/config.gni")


ohos_shared_library("ohmidi") {
  stack_protector_ret = true
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    cfi_vcall_icall_only = true
    debug = false
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
  }
  install_enable = true

  sources = [
    "OHMidi.cpp"
  ]

  include_dirs = [
    "${midi_framework_root}/interfaces/",
    "${midi_framework_root}/interfaces/inner_api/native",
    "${midi_framework_root}/interfaces/kits/c/midi",
  ]

  deps = [
    "${midi_framework_root}/frameworks/native/midi:midi_client",
  ]

  external_deps = [
    "hilog:libhilog",
  ]

  cflags_cc = [ "-std=c++20" ]

  innerapi_tags = ["ndk"]
  output_extension = "so"
  subsystem_name = "multimedia"
  part_name = "midi_framework"
}
