# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/multimedia/midi_framework/config.gni")

module_output_path = "midi_framework/"
ohos_unittest("midi_client_unit_test") {
  module_out_path = module_output_path
  sources = [
    "midi_client_unit_test.cpp",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-fno-access-control",
  ]

  include_dirs = [
    "${midi_framework_root}/frameworks/native/midi/include",
    "${midi_framework_root}/interfaces",
    "${midi_framework_root}/interfaces/inner_api/native",
    "${midi_framework_root}/interfaces/kits/c/midi",
  ]

  deps = [
    "${midi_framework_root}/frameworks/native/midi:midi_client",
    "${midi_framework_root}/services:midi_service",
    "${midi_framework_root}/services/idl:midi_framework_interface",
  ]

  sanitize = {
    cfi = true
    cfi_cross_dso = false
    boundary_sanitize = true
    debug = false
    integer_overflow = true
    ubsan = false
    blocklist = "${midi_framework_root}/cfi_blocklist.txt"
  }

  external_deps = [
    "c_utils:utils",
    "googletest:gmock",
    "googletest:gtest",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
}