# Copyright (c) 2021-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/multimedia/midi_framework/config.gni")

module_output_path = "midi_framework/"

ohos_unittest("midi_device_connection_unittest") {
  testonly = true
  module_out_path = module_output_path
  
  cflags = [
    "-Wall",
    "-Werror",
    "-fno-access-control",
  ]

  include_dirs = [
    "./include",
    "${midi_framework_root}/services/common/include",
    "${midi_framework_root}/interfaces/",
    "${midi_framework_root}/frameworks/native/midiutils/include",
    "${midi_framework_root}/interfaces/kits/c/midi",
    "${midi_framework_root}/services/server/include",
  ]
  
  sources = [
    "midi_device_connection_unit_test.cpp",
  ]

  deps = [
    "${midi_framework_root}/services/common:midi_common",
    "${midi_framework_root}/services:midi_service",
  ]

  external_deps = [
    "c_utils:utils",
    "googletest:gmock",
    "googletest:gtest",
    "hilog:libhilog",
    "ipc:ipc_single",
  ]
}
