# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/test.gni")
import("//foundation/multimedia/midi_framework/config.gni")

module_output_path = "midi_framework/"
ohos_unittest("midi_device_manager_unit_test") {
  module_out_path = module_output_path
  sources = [
    "midi_device_manager_unit_test.cpp",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-fno-access-control",
  ]

  include_dirs = [
    "${midi_framework_root}/frameworks/native/midiutils/include",
    "${midi_framework_root}/interfaces/",
    "${midi_framework_root}/interfaces/kits/c/midi",
    "${midi_framework_root}/services/common/include",
    "${midi_framework_root}/services/server/include",
    "${midi_framework_root}/test/unittest/common",
  ]

  deps = [
    "${midi_framework_root}/services/idl:midi_framework_interface",
    "${midi_framework_root}/services:midi_service",
    "${midi_framework_root}/services/common:midi_common",
  ]

  sanitize = {
    cfi = true
    cfi_cross_dso = false
    boundary_sanitize = true
    debug = false
    integer_overflow = true
    ubsan = false
    blocklist = "${midi_framework_root}/cfi_blocklist.txt"
  }
  external_deps = [
    "common_event_service:cesfwk_innerkits",
    "c_utils:utils",
    "googletest:gmock",
    "googletest:gtest",
    "hilog:libhilog",
  ]
}